# urdf_test

./: .flake8  .gitignore  mwe.py  nx_test.py  pyproject.toml  test.ipynb
.github/workflows/: ci.yaml
data/ur5/: ur5.urdf
urdf_test/utils/: urdf.py
