[tool.poetry]
name = "urdf-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "urdf_test"}]

[tool.poetry.dependencies]
python = "^3.10"
pyglet = "1.5.27"
glu = "^0.0.18"
urchin = "^0.0.27"
loguru = "^0.7.0"
types-six = "^1.16.21.9"
pyrender = {git = "git@github.com:mmatl/pyrender.git", rev = "master"}
ipython = "^8.14.0"
pydantic = "^2.3.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.0"
isort = "^5.12.0"
black = "^23.7.0"
flake8 = "^6.1.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
# https://github.com/PyCQA/isort/issues/457
no_sections = true

[tool.black]
line-length = 120
preview = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
follow_imports = "skip"
files = [
    "urdf_test",
]